# MatchingEngine

./: .clang-format  CMakeLists.txt  README.md
assets/: auctionAAPL.txt
src/: CMakeLists.txt  auctionAAPL.txt  main.cpp
src/AuctionAlgorithm/include/: Execution.hpp  MatchingEngine.hpp  MatchingEngineImpl.hpp  Order.hpp  OrderBook.hpp
src/AuctionAlgorithm/src/: CMakeLists.txt  Execution.cpp  MatchingEngine.cpp  MatchingEngineImpl.cpp  Order.cpp  OrderBook.cpp
test/gtest/: CMakeLists.txt
test/gtest/AuctionAlgorithmTest/: CMakeLists.txt  MatchingEngineTest.cpp  OrderTest.cpp
